<resources>
    <string name="app_name">AGNSS</string>
    <string name="google_maps_api_key">AIzaSyDFIvA8d4BKkrjXj_WYd_EDPFdxkOS4ww8</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LX공사</string>
    <string name="nav_header_subtitle">A-GNSS 위치 정확도 및 영상기반 실시간 영상 지오코딩 기술 개발을 통한 증강현실 기반 지적정보 표출 연구</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_jeonju">전주</string>
    <string name="menu_yongsan">용산</string>

    <string name="nav_itm_marker_pointing">마커측점</string>
    <string name="nav_itm_current_coordinates">좌표측정</string>
    <string name="nav_itm_measure_distance">거리측정</string>
    <string name="nav_itm_screen_capture">화면캡쳐</string>
    <string name="nav_itm_screen_capture_by_class">CaptureModelTester</string>
    <string name="nav_itm_lx_app">랜다랑</string>
    <string name="nav_itm_gps_frequency">GPS Frequency</string>

    <string name="nav_itm_point_out">지적</string>
    <string name="nav_itm_building">건물</string>
    <string name="nav_itm_axis">기준점</string>

    <string name="nav_itm_point_out_yongsan">용산지적</string>
    <string name="nav_itm_fence_tester">FenceTester</string>
    <string name="nav_itm_building_yongsan">용산건물</string>
    <string name="nav_itm_axis_yongsan">용산기준점</string>

    <string name="nav_itm_point_out_jeonju">전주지적</string>
    <string name="nav_itm_building_jeonju">전주건물</string>
    <string name="nav_itm_axis_jeonju">전주기준점</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <!-- Information view -->
    <string name="info_view_title">INFORMATION - AGNSS</string>
    <string name="info_item_title_location">현위치(diameter: Lon, Lat)</string>
</resources>
